<resources>
    <string name="app_name">RedBookLite</string>
    <string name="tab_home">首页</string>
    <string name="tab_market">市集</string>
    <string name="tab_message">消息</string>
    <string name="tab_me">我</string>
    <string name="developing_toast">功能正在开发中，敬请期待</string>
    <string name="feed_title">发现</string>
    <string name="profile_title">我的笔记</string>
    <string name="select_cover">选择封面图</string>
    <string name="hint_title">填写标题</string>
    <string name="hint_content">分享你的生活…</string>
    <string name="btn_publish">发布</string>
    <string name="empty_feed">还没有笔记，快去发布吧</string>
    <string name="empty_profile">你还没有发布笔记</string>
    <string name="publish_success">发布成功</string>
    <string name="publish_need_cover">请先选择封面图</string>
    <string name="publish_need_title">请填写标题</string>
    <string name="publish_need_content">请填写正文</string>
    <string name="like_format">%1$d</string>
    <string name="author_me">我</string>
    <string name="author_avatar">作者头像</string>
    <string name="like_button">点赞</string>
    <string name="profile_intro">记录生活，也记录自己</string>
    <string name="profile_notes">发布</string>
    <string name="profile_likes">点赞</string>
    <string name="profile_favorites">收藏</string>
    <string name="profile_actions">常用功能</string>
    <string name="profile_action_publish">去发布</string>
    <string name="profile_action_likes">我赞过的</string>
    <string name="profile_action_settings">设置</string>
    <string name="market_title">市集</string>
    <string name="market_subtitle">精选专题、分类入口与推荐内容</string>
    <string name="market_empty">暂无推荐内容</string>
    <string name="profile_title_label">我的主页</string>
</resources>
